# Exons-Detect

./: CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
src/exons_detect/: __init__.py  cli.py  detector.py  metrics.py  utils.py
src/exons_detect/__pycache__/: __init__.cpython-311.pyc.1994955917744  __init__.cpython-311.pyc.2285052255664  detector.cpython-311.pyc.2285052255536
tests/: test_metrics.py  test_package.py  test_smoke.py
tests/__pycache__/: test_metrics.cpython-311-pytest-7.4.0.pyc.13888  test_metrics.cpython-311-pytest-7.4.0.pyc.25116  test_package.cpython-311-pytest-7.4.0.pyc.13888  test_package.cpython-311-pytest-7.4.0.pyc.444  test_smoke.cpython-311-pytest-7.4.0.pyc.25116
text_data/: M4_human_test.json  M4_machine_test.json  RealDet_human_test.json  RealDet_machine_test.json
