[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exons-detect"
version = "0.1.0"
description = "A weighted dual-model detector for text analysis based on logits and hidden-state divergence."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Exons-Detect Authors" }
]
keywords = ["nlp", "detection", "transformers", "pytorch", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
  "transformers>=4.40",
  "tqdm>=4.66"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
exons-detect = "exons_detect.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
